# strands-diffusers

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-release.yml  ci.yml  docs.yml
docs/: discovery.md  index.md  layers.md  quickstart.md  wfm.md
docs/assets/: cosmos_action_chunk.json  rollout_id_av0_action.json  rollout_id_av1_action.json  rollout_policy_1_action.json  rollout_policy_2_action.json  rollout_policy_3_action.json  rollout_policy_4_action.json  rollout_policy_5_action.json
docs/gallery/: actions.md  audio.md  images.md  mesh.md  video.md
docs/js/: glass.js
docs/stylesheets/: extra.css
examples/: README.md  SETUP_COSMOS.md  cosmos_action_policy.py  gallery_20.py  gen_animations.py  generate_docs_assets.py  generate_real_assets.py  generate_wfm_rollouts.py  smoke.py  text_to_audio.py  text_to_image.py  text_to_video.py  visualize_actions.py
strands_diffusers/: __init__.py
strands_diffusers/core/: __init__.py  engine.py  io.py  registry.py  viz.py
strands_diffusers/tools/: __init__.py  use_diffusers.py
tests/: test_action_io.py  test_registry.py
